# mlops-taxi-trip-predict

./: README.md  pyproject.toml
01-intro/: 01_homework.ipynb
