[tool.poetry]
name = "mlops-taxi-trip-predict"
version = "0.1.0"
description = "Mlops project"
authors = ["santiago-higuitau <santiagohiguitau1030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ipykernel = "^6.29.4"
pandas = "2.1.1"
pyarrow = "^16.1.0"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
